--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "angular lessons",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "karma start test/karma.conf.js"
   },
   "repository": {
     "type": "git",
